# fightable

./: .gitignore  .gitmodules  AndroidManifest.xml  CMakeLists.txt  CMakeSettings.json  android_setup.sh  compile_android.sh  compile_android_arch.sh  exec_mc_fbsd.sh  list.txt  read_logcat.sh  setup_android_build.sh  setup_android_builds.sh  setup_android_vars.sh  translate_abi.sh
.github/workflows/: cmake-single-platform.yml
gh/: android.sh  android_single.sh  apk.sh  init_cmake.sh  keystore.txt  ubuntu_deps_x86_64.sh
src/anim_editor/: main.cpp  state.cpp  tab.cpp  tab_keyframe_prop.cpp  tab_keyframes.cpp  tab_viewpoint.cpp
src/anim_editor/inc/fightable/anim_editor/: keyframe.hpp  keyframe_prop.hpp  state.hpp  tab.hpp  viewpoint.hpp
src/assets/: SOURCES.txt  damage_overlay.json  test.mtl  wave_warp.fs  wave_warp_es3.fs
src/client/: init_ptx.cu  main.c
src/client/anim/: anim_id.c  animation.c  parse_animation.c  parse_keyframe.c  print.c  set.c
src/client/audio/: begin.c  channels_total.c  debug.c  fx.c  get_playtime.c  get_song_name.c  loop.c  play_module.c  stop.c  volume.c
src/client/block/: bitfield.c  id.c  serialize.c  update.c
src/client/camera/: load_default.c  mode2d.c
src/client/editor/: contains_id.cpp  draw.cpp  first_id.cpp  in_playback_mode.cpp  load.cpp  place_block.cpp  swipe_cur_objects.cpp
src/client/entity/: text.c
src/client/entity/base/: accessory.c  cleanup.c  damage.c  draw.c  draw_pos.c  getters.c  init.c  jump.c  move.c  serialize.c  setters.c  update.c
src/client/entity/lplayer/: damage.c  draw.c  init.c  perform_death.c  update.c
src/client/etc/: color.c  config.c  intvec.c  mixer.c  notif_mgr.c  pthread_compat.c  rsb_color.c  sanitizer.c  state.c  storage.c  time.c  unitype.c
src/client/hitbox/: clip_x.c  clip_y.c  expand.c  intersects.c  move.c
src/client/inc/fightable/: block.h  block_library.h  button.h  camera.h  color.h  config.h  debug.h  editor.h  editor.hpp  editor_library.h  entity.h  entity_library.h  etext.h  flags.h  gfx.h  group.h  hitbox.h  init.h  intrect.h  intro.h  intvec.h  intvec_math.h  keyboard.h  level.h  mixer.h  mp_client.h  mp_create_menu.h  notif_mgr.h  notif_object.h  player.h  pthread_compat.h  rect.h  rendered_object.h  renderer.h  sanitizer.h  serializable.h  slider.h  sound_engine.h  sound_library.h  state.h  (+6 more)
src/client/inc/nt5emul/: renderer_animation.h  renderer_ease.h  renderer_event.h  renderer_keyframe.h
src/client/inc/nt5emul/arrays/: rsb_array_color.h
src/client/inc/nt5emul/tui/: environment.h  file_selector.h  frame.h  input.h  menu.h  progress_bar.h  rectangle.h  text.h
src/client/inc/tunnelos/: unitype.h
src/client/intro/: celestial_fantasia.c  draw.c  electric_drug.c  endless_dream.c  gfx.cpp  init.c  seekable_row.c
src/client/intro/editor/: draw.cpp  init.cpp
src/client/intro/menu/: draw.c  draw_background.c  init.c  on_editor.c  on_mp_create.c  on_mp_join.c  on_multiplayer.c  on_options.c  on_play.c  process_base.c  process_options.c  process_play.c
src/client/level/: block_processor.c  destroy.c  destroy.cu  destroy_entity.c  draw.c  draw_pixelated.c  draw_pixelated.cpp  find_player.c  gameover.c  get_hitboxes.c  light_source.c  load.c  load_test.c  prepare_render.cu  reload_cuda_ctx.cu  save.cpp  serialize.c
src/client/mp_create/: delegate.c  draw.c
src/client/mpserver/: delegate.c  draw.c
src/client/ntldr_tui/: fileselector_click.c  fileselector_load.c  fileselector_setlisting.c  fileselector_unload.c  fileselector_update.c  frame.c  input.c  load_environment.c  menu.c  progress_bar.c  rectangle.c  text.c
src/client/renderer/: begin_texture_mode.c  button.c  draw.c  end_texture_mode.c  file_selector.c  grid_3d.c  keyboard.c  mouse.c  overlay_scheduler.cpp  stack_find.c  tilemap.c
src/client/renderer/gfx/: damage_overlay.c  draw.c  fade.c  shake.c  update.c
src/client/renderer/ui/: button.c  notification.c  rect.c  slider.c  square_button.c  text.c  tilemap.c
src/client/serializable/: serializable.c
src/collide_test/: main.c
src/collide_test/hitbox/: clip_x.c  clip_y.c  expand.c  intersects.c  move.c
src/collide_test/inc/: hitbox.h
src/cuda_test/: gpu.cu  main.c  main.cu  test.h
src/http/: http_server_create.cpp  http_server_destroy.cpp  resource_dir.cpp
src/http/content_type/: HttpContentType.cpp  HttpContentTypeAudio.cpp  HttpContentTypeHtml.cpp  HttpContentTypeImage.cpp  HttpContentTypeJson.cpp  HttpContentTypeOctet.cpp  HttpContentTypeText.cpp
src/http/inc/fightable/http/: ApiRequest.hpp  HttpContentTypeAudio.hpp  HttpContentTypeHtml.hpp  HttpContentTypeImage.hpp  HttpContentTypeJson.hpp  HttpContentTypeOctet.hpp  HttpContentTypeText.hpp  SplitString.hpp  http_server.h  http_server.hpp  remote_resource_manager.h  (+3 more)
src/http/req/: APIRequest.cpp  SplitString.cpp  v1.helloworld.cpp  v1.res.request.cpp
src/launcher/: main.c
src/mp_rect_test/src/: main.c  main.cpp
src/mp_rect_test/src/client/: main.c
src/physics_test/: main.c
src/raylib_statistics/: state.c  test.c  texture.c
src/raylib_statistics/inc/rlstats/: state.h
src/rfrontend/frasterizer/: draw.c  raylib_char.c  state.c  window.c
src/rfrontend/inc/: fraylib.h
src/rfrontend/inc/frfrontend/: frasterizer.h  rlapi.h
src/shared/inc/fightable/: generic_tools.hpp  shared_config.h  sockcompat.h  string.h
src/shared/inc/rsb/: rsb_array_auchar.h  rsb_array_char.h  rsb_array_cstr.h  rsb_array_gen.h  rsb_array_pchar.h  rsb_array_uchar.h
src/shared/src/: assert.c  auchar.c  char.c  cstr.c  pchar.c  string.c  time.c  time.cpp  tools.cpp  uchar.c
src/shooting_system_test/include/: hitbox.h
src/shooting_system_test/src/: main.cpp
src/shooting_system_test/src/hitbox/: expand.c  intersects.c  move.c
src/simple_window/src/: main.c
src/tcpclient/src/: create.c  create.cpp  destroy.c  destroy.cpp  disconnect.c  send_msg.c  send_msg.cpp  thread.c  thread.cpp
src/tcpclient_raylib/: main.c
src/tcpclient_test/: main.c
src/tcpserver_raylib/: main.c
src/tcpsrv/src/: daemon.cpp  message.cpp  tools.cpp  user.cpp
src/tcpsrv_test/: main.c
src/trig/: generate.js
(+12 files in other folders)
